--- a/soapcord.theme.css
+++ b/soapcord.theme.css
@@ -230,7 +230,7 @@ border-radius: 8px 8px 0px 0px;
   */
   [aria-label="HypeSquad Brilliance"] .profileBadge22-3GAYRy.profileBadge-12r2Nm.desaturate-_Twf3u {
 
-  content: url(/assets/88d4f11bee9ea34fee59973b33353da0.svg) !important;
+  content: url(https://raw.githubusercontent.com/Debuggingss/discord-badges/master/svgs/88d4f11bee9ea34fee59973b33353da0.svg) !important;
   max-width: 70%;
   height: auto;
   margin-left: auto;  
@@ -246,7 +246,7 @@ border-radius: 8px 8px 0px 0px;
 
   [aria-label="HypeSquad Balance"] .profileBadge22-3GAYRy.profileBadge-12r2Nm.desaturate-_Twf3u {
 
-  content: url(/assets/3245b2cd85b787b195ea8f6e10ef5790.svg);
+  content: url(https://raw.githubusercontent.com/Debuggingss/discord-badges/master/svgs/3245b2cd85b787b195ea8f6e10ef5790.svg);
   max-width: 70%;
   height: auto;
   margin-left: auto;  
@@ -261,7 +261,7 @@ border-radius: 8px 8px 0px 0px;
 
   [aria-label="HypeSquad Bravery"] .profileBadge22-3GAYRy.profileBadge-12r2Nm.desaturate-_Twf3u {
 
-  content: url(/assets/26a2dc8c9d70955a988cb377eec84c22.svg);
+  content: url(https://raw.githubusercontent.com/Debuggingss/discord-badges/master/svgs/26a2dc8c9d70955a988cb377eec84c22.svg);
   max-width: 70%;
   height: auto;
   margin-left: auto;  
